# numpapl

./: TODO.md  aparse  aparse.py  apl  apl.py  aplinterp.py  aplparser.py  arr.py  environment.py  generate.py  grammar  primitives.py  pyproject.toml
tests/: test_interpreter.py  test_parser.py
