[tool.poetry]
name = "scholes"
version = "0.1.0"
description = ""
authors = ["Stefan Kruger <stefan.kruger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pytest = "^7.2.1"

[tool.poetry.dev-dependencies]
mypy = "^1.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
